--- a/style.css
+++ b/style.css
@@ -244,18 +244,16 @@ body {
 
 .category-pill {
     position: absolute;
-    right: -10px; 
-    top: 50%;
+    right: 25px;
+    top: 55px;
     transform: translateY(-50%);
-    
-    padding: 4px 8px;
-    border-radius: 15px;
-    font-size: 0.7em;
+    padding: 4px 20px;
+    border-radius: 119px;
+    font-size: 30px;
     font-weight: bold;
     text-transform: uppercase;
     white-space: nowrap;
-    
-    color: var(--bg-color); 
+    color: var(--bg-color);
     border: 1px solid currentColor;
     z-index: 10;
 }
